# claytools

./: .env.sample  .envrc.sample  .gitignore  ARCHITECTURE.md  LICENSE.txt  README.md  claytools.code-workspace  pyproject.toml  requirements.txt  requirements.txt.bak  workspace.code-workspace
dagster-etl/: .env.sample  README.md
django-enviro/: README.md
django-enviro/enviro/: manage.py
django-enviro/enviro/enviro/: asgi.py  settings.py  urls.py  wsgi.py
etl_tools/: .envrc  .envrc.sample  .gitignore  README.md  requirements.txt
etl_tools/global/: __init__.py
etl_tools/src/general/: __init__.py  assets.py
icloud-photos-dl/: .env.sample  README.md  requirements.txt  workspace.code-workspace
image-tools/: .env.sample  README.md  autoshoot-desktop.sh  com.autoshoot.agent.plist  im-convert-exr-png.sh
sftm-tools/: .env.sample
sftm-tools/Blender/config/: static-mesh-send2ue-config.json
shared-utils/: send-pushover.py
shared_utils/: send_pushover.py
src/file_tools/: create-multipart-archive-from-folder.sh
src/image_tools/: convert-exr-to-png.sh
src/sftm_tools/YT/utils/: yt_dl_watchlist.sh
src/text_tools/: compare_contents_md5.py  export-md-files-to-pdf-html.py  gpt3-text-checker.py  notify-journal-files-marked-for-deletion.py  rename_to_zk_unique_ref.py
text-tools/: README.md  notify-journal-files-marked-for-deletion.py
tools/etl/: .envrc.sample  .gitignore  requirements.txt
tools/etl/src/general/: assets.py
tools/icloud_photos_dl/: .env.sample  dl-photos.sh  icloud-photos-dl.plist  mount_remote.sh
tools/sftm/: .env.sample  .gitignore  ARCHITECTURE.d2  README.md  requirements.txt
tools/sftm/YT/utils/: yt_dl_watchlist.sh
tui/: .env.sample  .gitignore  README.md  tui_main.py
tui/css/: global.css
web-tools/: .env.sample  README.md  download-all-pages.sh  get-urls.py  package-lock.json
